[gd_scene load_steps=4 format=3 uid="uid://5w6m4pnxsnc4"]

[ext_resource type="PackedScene" uid="uid://48l2vnrueam4" path="res://Graphic Elements/popups/my_popup.tscn" id="1_bctcl"]
[ext_resource type="Script" uid="uid://3eb3ofswab50" path="res://SaveManager/load_game_menu.gd" id="2_jb7uj"]
[ext_resource type="PackedScene" uid="uid://c5uhhdm6s5ims" path="res://Graphic Elements/Buttons/my_button.tscn" id="3_6uiar"]

[node name="LoadGameMenu" instance=ExtResource("1_bctcl")]
script = ExtResource("2_jb7uj")

[node name="Title" parent="Window/VBoxContainer" index="0"]
text = "Load Game"

[node name="Text" parent="Window/VBoxContainer" index="1"]
text = ""

[node name="Slot0Button" parent="Window/VBoxContainer" index="2" instance=ExtResource("3_6uiar")]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Slot 0"

[node name="Slot1Button" parent="Window/VBoxContainer" index="3" instance=ExtResource("3_6uiar")]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Slot 1"

[node name="Slot2Button" parent="Window/VBoxContainer" index="4" instance=ExtResource("3_6uiar")]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Slot 2"

[node name="Slot3Button" parent="Window/VBoxContainer" index="5" instance=ExtResource("3_6uiar")]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Slot 3"

[node name="VBoxContainer2" type="VBoxContainer" parent="Window" index="1"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="DeleteButton" parent="Window/VBoxContainer2" index="0" instance=ExtResource("3_6uiar")]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Delete a save"

[node name="ReturnButton" parent="Window/VBoxContainer2" index="1" instance=ExtResource("3_6uiar")]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Return"

[connection signal="pressed" from="Window/VBoxContainer/Slot0Button" to="." method="_on_slot_0_button_pressed"]
[connection signal="pressed" from="Window/VBoxContainer/Slot1Button" to="." method="_on_slot_1_button_pressed"]
[connection signal="pressed" from="Window/VBoxContainer/Slot2Button" to="." method="_on_slot_2_button_pressed"]
[connection signal="pressed" from="Window/VBoxContainer/Slot3Button" to="." method="_on_slot_3_button_pressed"]
[connection signal="pressed" from="Window/VBoxContainer2/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="Window/VBoxContainer2/ReturnButton" to="." method="_on_return_button_pressed"]
